hphp/test/zend/good/ext-standard-file/php_fd_wrapper_02.php
<?php
$f = fopen("php://fd/1", "rkkk");
fwrite($f, "hi!");

echo "\nDone.\n";