hphp/test/zend/bad/ext-standard-file/php_fd_wrapper_03.php
<?php
fopen("php://fd", "w");
fopen("php://fd/", "w");
fopen("php://fd/-2", "w");
fopen("php://fd/1/", "w");

echo "\nDone.\n";